--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@ li {
 </head>
 
 <body>
-<h1>JSONツリービューア</h1>
+<h1>JSON Tree Viewer</h1>
 <input type="file" id="fileInput" accept=".json">
-<button id="loadUrlBtn">URLから読み込み</button><input type="text" id="urlInput" placeholder="https://example.com/data.json">
+<div><input type="text" id="urlInput" placeholder="https://example.com/data.json"><button id="loadUrlBtn">URLから読み込み</button></div>
 <div id="treeContainer">ファイルまたはURLを指定してください。</div>
 
 <script>
